* readme.textile: update the reading list

--- a/readme.textile
+++ b/readme.textile
@@ -163,6 +163,9 @@ h2. Issues
 
 h2. Resources
 
+* "Concepts, Technqiues, and Models of Computer Programming":http://www.info.ucl.ac.be/~pvr/book.html, Chapters 9 and 12
+* "Art of the Propagator":http://dspace.mit.edu/handle/1721.1/44215
+* "Constraint Propagation - Models, Techniques, Implementation":http://people.cs.kuleuven.be/~guido.tack/dissertation.php
 * "Relational Programming in miniKanren: Techniques, Applications, and Implementations":http://gradworks.umi.com/33/80/3380156.html
 * "The Reasoned Schemer":http://mitpress.mit.edu/catalog/item/default.asp?ttype=2&tid=10663
 * "Efficient representations for triangular substitutions: A comparison in miniKanren":https://www.cs.indiana.edu/~lkuper/papers/walk.pdf
