--- a/readme.textile
+++ b/readme.textile
@@ -109,6 +109,36 @@ The above is quite slow since we have to walk the data structure and replace the
   (unifier u w))
 </pre>
 
+h3. Defining facts
+
+Sometimes it's useful to create a list of facts that you want to run queries over. Use <code>defrel</code> and <code>fact</code>. Facts are just tuples and Logos will index them by the first element.
+
+<pre>
+(defrel man p)
+(fact man 'Bob)
+(fact man 'John)
+(fact man 'Ricky)
+
+(defrel woman p)
+(fact woman 'Mary)
+(fact woman 'Martha)
+(fact woman 'Lucy)
+    
+(defrel likes p1 p2)
+(fact likes 'Bob 'Mary)
+(fact likes 'John 'Martha)
+(fact likes 'Ricky 'Lucy)
+
+(defrel fun p)
+(fact fun 'Lucy)
+
+(run* [q]
+  (exist [x y]
+    (fun y)
+    (likes x y)
+    (== q [x y]))) ; ([Rick Lucy])
+</pre>
+
 h2. About
 
 This library is under heavy development as I cover the ideas in Byrd's thesis and other sources on logic programming. It currently only supports the Clojure 1.3.0 alphas.
